<resources>
    <string name="app_name">Book Store App</string>

    <string name="default_author_unknown">Author unknown</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>


    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No books here ...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <string name="book_title">Title: </string>
    <string name="book_author">Author: </string>
    <string name="price">Price: </string>
    <string name="dollar">$</string>
    <string name="quantity">Quantity: </string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="supplier_name">Supplier Name: </string>
    <string name="supplier_phone_number">Supplier Phone Number: </string>

    <string name="quantity_in_stock">Quantity in stock: </string>
    <string name="buy">Sale</string>

    <string name="unknown_author">Unknown author</string>
    <string name="unknown_supplier_name">Unknown supplier name</string>
    <string name="unknown_supplier_phone_number">Unknown supplier phone number</string>


    <!-- Label for editor menu option to save book
    and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg_all_books">Delete all books?</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete books?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user if he want to write a required title the current book [CHAR LIMIT=NONE] -->
    <string name="empty_title_dialog_msg">The book must have a title, if you want to save new data. Do you want to write the title of the book?</string>

    <!-- Dialog button text for the option if user want to write title of book [CHAR LIMIT=20] -->
    <string name="yes">Yes</string>

    <!-- Dialog button text for the option if user don't want to write title of book [CHAR LIMIT=20] -->
    <string name="no">No</string>


    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit a Book</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">book saved</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>


</resources>
