<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/single_list_item">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/text_to_edit"
        android:textStyle="bold"
        android:paddingLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/margin_bottom_minus"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/text_author_quantity"
        android:textStyle="italic"
        android:paddingLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_bottom_minus">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_between_value_unit"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_price"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/price_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dollar"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_price"
            android:textStyle="bold" />

            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/quantity"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textColorLightBlue"
            android:textSize="@dimen/text_quantity"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_margin"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textColorLightBlue"
            android:textSize="@dimen/text_author_quantity"/>

                </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buy_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:textSize="@dimen/text_to_edit"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@color/textColorWhite" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/textColorWhite"
        android:layout_marginTop="@dimen/button_phone_margins_top_bottom"
        android:layout_marginBottom="@dimen/button_phone_margins_top_bottom" />
</LinearLayout>